--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-  <p id="saudacao">Bem-vindo!</p>
+  <p id="saudacao">Bem-vindo {{ usuario.nomeCompleto }}!</p>
 </ion-content>
