Adiciona o provider UsuarioProvider, que se comunica com a API do usuário

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -23,7 +23,7 @@
 
     <ion-item>
       <ion-label floating>CNPJ</ion-label>
-      <ion-input type="text" id="inputCNPJ" required></ion-input>
+      <ion-input type="number" id="inputCNPJ" required></ion-input>
     </ion-item>
 
     <ion-item>
