--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,7 +17,7 @@
 <ion-content padding>
 
   <div text-center>
-    <ion-img width="80" height="80" src="../../assets/imgs/logo.jpeg"></ion-img>
+    <ion-img width="200" height="200" src="assets/imgs/logo.jpeg"></ion-img>
   </div>
 
   <ion-list>
